--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<h1>Moment 3 - Angular</h1>
-<nav>
-    <ul>
-        <li><a routerLink="/home">Startsidan</a></li>
-        <li><a routerLink="/assignment">Information</a></li>
-        <li><a routerLink="/convert">Konvertering</a></li>
-    </ul>
-</nav>
+<app-header />
+<main>
 <router-outlet />
+</main>
+<app-footer />
