--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+body,
+main {
+    margin: 0 auto;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+body {
+    background-color: #e1d9d3;
+}
+
