inputs från video - läsanvisninga klar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <header id="main-header">
     <nav class="menu-nav">
         <ul id="nav-menu">
-        <li><a routerLink="/">Startsida</a></li>
-        <li><a routerLink="/assignment">Information - moment3</a></li>
-        <li><a routerLink="/convert">Konvertering</a></li>
+        <li><a routerLink="/home" routerLinkActive="current">Startsida</a></li>
+        <li><a routerLink="/assignment" routerLinkActive="current">Information - moment3</a></li>
+        <li><a routerLink="/convert" routerLinkActive="current">Konvertering</a></li>
     </ul>
     </nav>
     </header>
