--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,12 @@
 <footer>
+    <section class="icons">
+        <div class="lying">
+    <img [src]="catImage" alt="ikon liggande katt">
+</div>
+<div class="sitting">
+    <img [src]="catSittingImage" alt="ikon sittande katt">
+</div>
+</section>
     <div class="bar-footer"></div>
     <section class="footer">
     <div class="footer-left">
