--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
 <h1>Startsidan</h1>
+
+<div class="Bubbas-bilder">
+<img [src]="Bubbas" alt="Katt i säng"><br>
+</div>
+
+<div>
+    <button (click)="changeImage()">Ändra bild</button>
+</div>
