--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,7 +14,7 @@
     padding-top: 0;
     margin-top: 0;
     font-family: "Karla", serif;
-    font-size: 1em;
+    font-size: 1.5em;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5em;
@@ -31,7 +31,7 @@
     padding-top: 0;
     margin-top: 0;
     font-family: "Karla", serif;
-    font-size: 1em;
+    font-size: 1.5em;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5em;
@@ -39,10 +39,33 @@
   }
   
   .bar-footer {
-    margin-top: 20em;
     margin-bottom: 2em;
+    margin-top: 0;
     width: 100%;
     height: 1px;
     background-color: white;
     opacity: 70%;
+  }
+
+  img {
+    width: 30%;
+    margin-top: 5em;
+  }
+
+  .icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .lying {
+    align-items: flex-start;
+    display: block;
+    margin-top: 5em;
+  }
+
+  .sitting {
+    align-items: flex-end;
+    display: block;
+    margin-top: 2.5em;
   }
