--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,21 @@ body {
     background-color: #e1d9d3;
 }
 
+button {
+    margin: 1em auto;
+    display: flex;
+    margin-bottom: 2em;
+    align-self: center;
+    justify-content: center;
+    padding: 1em 0;
+    width: 10em;
+    cursor: pointer;
+    background-color: #a18876;
+    color: white;
+    border-radius: 5px;
+    transition: transform 0.2s ease;
+  }
+
+  button:hover {
+    transform: scale(1.1);
+  }
