konverting av värden

--- a/src/app/convert/convert.component.html
+++ b/src/app/convert/convert.component.html
@@ -1,21 +1,29 @@
 <h1>Konvertering av värden</h1>
 
-<div>
-    <label for="num1">Nummer 1:</label>
-    <input type="number" id="num1" [(ngModel)]="num1">
-</div>
-<div>
-    <label for="num2">Nummer 2:</label>
-    <input type="number" id="num2" [(ngModel)]="num2">
-</div>
+<div class="converter-box">
+    <h3>Meter ⇄ Feet</h3>
+    <div class="input-row">
+      <label for="meters">Meter:</label>
+      <input type="number" id="meters" [(ngModel)]="meters">
+      <button (click)="convertToFeet()">Till Feet</button>
+    </div>
+    <div class="input-row">
+      <label for="feet">Feet:</label>
+      <input type="number" id="feet" [(ngModel)]="feet">
+      <button (click)="convertToMeters()">Till Meter</button>
+    </div>
+  </div>
 
-<div>
-    <button (click)="add()">Addera</button>
-    <button (click)="subtract()">Subtrahera</button>
-    <button (click)="multiply()">Multiplicera</button>
-    <button (click)="divide()">Dividera</button>
-</div>
-
-<div>
-    <p>Resultat: {{ result }}</p>
-</div>
+  <div class="converter-box">
+    <h3>Celsius ⇄ Fahrenheit</h3>
+    <div class="input-row">
+      <label for="celsius">Celsius:</label>
+      <input type="number" id="celsius" [(ngModel)]="celsius">
+      <button (click)="convertToFahrenheit()">Till Fahrenheit</button>
+    </div>
+    <div class="input-row">
+      <label for="fahrenheit">Fahrenheit:</label>
+      <input type="number" id="fahrenheit" [(ngModel)]="fahrenheit">
+      <button (click)="convertToCelsius()">Till Celsius</button>
+    </div>
+  </div>
