--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer>
     <section class="icons">
         <div class="lying">
-    <img [src]="catImage" alt="ikon liggande katt">
+    <img [src]="catImage" alt="ikon liggande katt" id="cat-lying">
 </div>
 <div class="sitting">
-    <img [src]="catSittingImage" alt="ikon sittande katt">
+    <img [src]="catSittingImage" alt="ikon sittande katt" id="cat-sitting">
 </div>
 </section>
     <div class="bar-footer"></div>
