--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
 <img [src]="Bubbas" alt="Katt i säng"><br>
 </div>
 
-<div>
-    <button (click)="changeImage()">Ändra bild</button>
-</div>
+<div class="image-button-container">
+    <button class="image-button" (click)="changeImage()">Se ny bild</button>
+  </div>
+  
