--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,3 @@
-h1 {
-    display: flex;
-    margin: 2em auto;
-    text-align: center;
-    justify-content: center;
-}
-
 img {
     width: 50%;
     display: flex;
@@ -13,3 +6,9 @@ justify-content: center;
 margin: 2em auto;
 border-radius: 5px;
 }
+
+.image-button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+  }
