--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,13 @@
 body,
 main {
-    margin: 0 auto;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    display: flex;
     font-family: 'Times New Roman', Times, serif;
+}
+
+h1 {
+  display: flex;
+  margin: 2em auto;
+  text-align: center;
+  justify-content: center;
 }
 
 body {
@@ -13,7 +15,6 @@ body {
 }
 
 button {
-    margin: 1em auto;
     display: flex;
     margin-bottom: 2em;
     align-self: center;
