information om uppgiften

--- a/src/app/assignment/assignment.component.html
+++ b/src/app/assignment/assignment.component.html
@@ -1,5 +1,17 @@
 <h1>Information om moment 3</h1>
 
 <div class="information-box">
-    <p>Bla bla</p>
+    <p>Jag löste denna uppgift främst med hjälp av de filmer som fanns tillgängliga 
+        under kursmaterial. Jag följde med i skapandet av ett projekt i Angular och 
+        vidareutvecklade sedan detta i enlighet med uppgiftsbeskrivningen för moment 3.
+        Webbplatsen i Angular är uppbyggd med hjälp av återanvändbara komponenter som jag 
+        skapat. Dessa är assignment, convert, footer, header, home samt not-found. Spec-filen 
+        för samtliga komponenter valde jag att ta bort då jag inte hade användning för denna. FormsModule 
+        har använts för att [(ngModel)] ska fungera. Detta är en two-way binding som används för att 
+        skapa tvåvägs data bindning genom att kombinera property-binding och event-bindning 
+        med hjälp av ngModel direktivet.</p><br>
+        <p>Rutter har definierats genom användning av RouterModule och Routes i app.routes.ts filen. 
+            I den har jag definierat rutter för de olika delarna av applikationen, inklusive en 404-sida 
+            för sidor som inte hittas samt en standard-rutt som omdirigerar användaren till hem-sidan om 
+            ingen annan rutt matchar.</p>
 </div>
