--- a/src/app/assignment/assignment.component.css
+++ b/src/app/assignment/assignment.component.css
@@ -8,3 +8,8 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
+
+  .information-box p {
+    font-size: 1.2em;
+    line-height: 2em;
+  }
