--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
     <section class="footer">
     <div class="footer-left">
     <p>Amanda Persdotter</p>
-    <p>amer1301&#64;hotmail.com</p>
+    <p>Amer1301&#64;hotmail.com</p>
 </div>
 <div class="footer-right">
     <p>DT208G Datateknik GR (B)</p>
