--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,3 +12,9 @@ border-radius: 5px;
     justify-content: center;
     margin-top: 0;
   }
+
+  @media (max-width: 766px) {
+    img {
+        width: 75%;
+  }
+}
