--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,74 +1,143 @@
 .footer {
-    display: flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20em;
-  }
-  
-  .footer-left {
-    align-items: flex-start;
-    display: block;
-  }
-  
-  .footer-left p {
-    padding-top: 0;
-    margin-top: 0;
-    font-family: "Karla", serif;
-    font-size: 1.5em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5em;
-    opacity: 70%;
-  }
-  
-  .footer-right {
-    align-items: flex-end;
-    display: block;
-    white-space: nowrap;
-  }
+}
 
-  .footer-right p {
-    padding-top: 0;
-    margin-top: 0;
-    font-family: "Karla", serif;
-    font-size: 1.5em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5em;
-    opacity: 70%;
-  }
-  
-  .bar-footer {
-    margin-bottom: 2em;
-    margin-top: 0;
-    width: 100%;
-    height: 1px;
-    background-color: white;
-    opacity: 70%;
-  }
+.footer-left {
+  align-items: flex-start;
+  display: block;
+}
 
-  img {
-    margin-top: 5em;
-  }
+.footer-left p {
+  padding-top: 0;
+  margin-top: 0;
+  font-family: "Karla", serif;
+  font-size: 1.5em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  opacity: 70%;
+}
 
-  .icons {
-    display: flex;
-    justify-content: space-between;
+.footer-right {
+  align-items: flex-end;
+  display: block;
+  white-space: nowrap;
+}
+
+.footer-right p {
+  padding-top: 0;
+  margin-top: 0;
+  font-family: "Karla", serif;
+  font-size: 1.5em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  opacity: 70%;
+}
+
+.bar-footer {
+  margin-bottom: 2em;
+  margin-top: 0;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  opacity: 70%;
+}
+
+img {
+  margin-top: 5em;
+}
+
+.icons {
+  display: flex;
+  justify-content: space-between;
+}
+
+#cat-lying {
+  width: 45%;
+  align-items: flex-start;
+  display: block;
+  margin-bottom: 0;
+  margin-top: 12.5em;
+}
+
+#cat-sitting {
+  width: 25%;
+  align-items: flex-end;
+  display: block;
+  padding-left: 35em;
+  margin-right: 1em;
+  margin-top: 2.5em;
+}
+
+@media (max-width: 1355px) {
+  #cat-sitting {
+    padding-left: 25em;
+    margin-top: 6em;
+  }
+}
+
+@media (max-width: 1045px) {
+  #cat-sitting {
+    width: 25%;
+    padding-left: 15em;
+    margin-right: 1em;
+    margin-top: 9em;
   }
 
   #cat-lying {
-      width: 45%;
-      align-items: flex-start;
-      display: block;
-      margin-bottom: 0;
-      margin-top: 12.5em;
+    width: 35%;
+    margin-top: 14em;
   }
 
-  #cat-sitting {
-    width: 25%;
-    align-items: flex-end;
-    display: block;
-    padding-left: 35em;
-    margin-right: 1em;
-    margin-top: 2.5em;
+  .footer-right p,
+  .footer-left p {
+    font-size: 1.2em;
   }
+
+  @media (max-width: 766px) {
+    #cat-sitting {
+      width: 35%;
+      padding-left: 10em;
+      margin-right: 1em;
+      margin-top: 9em;
+    }
+
+    .footer-right,
+    .footer-left {
+      white-space: normal;
+    }
+  }
+
+  @media (max-width: 662px) {
+    #cat-sitting {
+      display: none;
+    }
+
+    .footer {
+      gap: 0;
+    }
+  }
+
+  @media (max-width: 455px) {
+    .footer {
+      display: block;
+      justify-content:flex-start;
+      align-items:flex-start;
+    }
+
+    .footer-right {
+      align-items: flex-start;
+      display: block;
+      white-space: nowrap;
+    }
+
+    .footer-right p,
+    .footer-left p {
+      font-size: 1em;
+    }
+  }
+}
