--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -37,3 +37,15 @@
   .current {
     font-weight: bold;
   }
+
+  @media (max-width: 624px) {
+    #nav-menu {
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    .menu-nav li {
+      border-right: none;
+    }
+  }
